optimize image size and fix wrong width

--- a/src/SEstruch/WebsiteBundle/Resources/public/css/10-style.css
+++ b/src/SEstruch/WebsiteBundle/Resources/public/css/10-style.css
@@ -103,7 +103,7 @@ section {
 
 section.contacto {
     background-image: url('/images/cuadro.jpg');
-    width: 1000px;
+    width: 990px;
     height: 500px;
 }
 
